# typhoon

./: .clang-format  .editorconfig  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: pr.yml  push.yml
lib/: CMakeLists.txt
tempest/: Box.hpp  CMakeLists.txt  Math.hpp  Matrix.hpp  Plane.hpp  Quaternion.hpp  Random.hpp  Range.hpp  Rect.hpp  Sphere.hpp  Vector.hpp
tempest/box/: CAaBox.hpp  CBoundingBox.hpp
tempest/math/: CMath.cpp  CMath.hpp
tempest/matrix/: C33Matrix.cpp  C33Matrix.hpp  C34Matrix.cpp  C34Matrix.hpp  C44Matrix.cpp  C44Matrix.hpp
tempest/plane/: C4Plane.hpp
tempest/quaternion/: C4Quaternion.cpp  C4Quaternion.hpp
tempest/random/: CRandom.cpp  CRandom.hpp  CRndSeed.cpp  CRndSeed.hpp
tempest/range/: CRange.hpp  CiRange.hpp
tempest/rect/: CRect.cpp  CRect.hpp  CiRect.hpp
tempest/sphere/: CAaSphere.hpp
tempest/vector/: C2Vector.cpp  C2Vector.hpp  C2iVector.hpp  C3Vector.cpp  C3Vector.hpp  C3iVector.hpp  C4Vector.hpp  CImVector.cpp  CImVector.hpp
test/: CMakeLists.txt  Math.cpp  Matrix.cpp  Random.cpp  Rect.cpp  Vector.cpp
